Mantano Git organization cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,16 @@ UserInterfaceState.xcuserstate
 # UNKNOWN: recommended by others, but I can't discover what these files are
 #
 # ...none. Everything is now explained.
+
+####
+# Eclipse projects
+
+.classpath
+.project
+.cproject
+
+# IDEA projects
+.idea
+*.eml
+*.iml
+
